# boltz-backend

./: .dockerignore  .eslintrc.js  .git-commit-template.txt  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  emailConfig.example.json  eslint.config.mjs  generateTypechain.js  jest.config.js  justfile  mkdocs.yml  package-lock.json  package.json  parseGitCommit.js  protos.js  run-int.js  security.md  swagger-spec.json  swagger.js  tsconfig.build.json  tsconfig.json  tsconfig.test.json  tslint.json
boltz-backup/: Cargo.toml
boltz-backup/src/: lib.rs
boltz-backup/src/providers/: mod.rs  multi.rs  s3.rs
boltz-cache/: Cargo.toml
boltz-cache/src/: lib.rs  memcache.rs  redis.rs
boltz-core/: Cargo.toml  LICENSE  README.md
boltz-core/src/: address.rs  client.rs  consts.rs  lib.rs  musig.rs  network.rs  preimage_detector.rs  target_fee.rs  utils.rs  wrapper.rs
boltz-core/src/bitcoin/: claim.rs  mod.rs  tx.rs
boltz-core/src/elements/: asset_rescue.rs  client.rs  mod.rs  tx.rs
boltz-evm/: Cargo.toml
boltz-evm/src/: commitment.rs  lib.rs  log_layer.rs  manager.rs  refund.rs  refund_signer.rs  serde_utils.rs  signature.rs  test_utils.rs  utils.rs
boltz-evm/src/contracts/: erc20_swap.rs  ether_swap.rs  mod.rs
boltz-evm/src/quoter/: common.rs  mod.rs  route.rs  router.rs
boltzr/: Cargo.toml  build.rs
boltzr-cli/: Cargo.toml  build.rs
boltzr-cli/src/: main.rs  parsers.rs  scan_locked.rs  serde.rs  utils.rs  validators.rs  ws.rs
boltzr-cli/src/api/: mod.rs
boltzr-cli/src/ark/: decode.rs  mod.rs
boltzr-cli/src/evm/: balance.rs  commitment.rs  erc20_swap.rs  ether_swap.rs  lockup.rs  mine.rs  mod.rs  refund.rs  scan_locked.rs  send.rs  utils.rs
boltzr-cli/src/grpc/: mod.rs
boltzr-cli/src/tx/: claim.rs  mod.rs  refund.rs  utils.rs
boltzr/fixtures/: bitcoin-block.txt  bitcoin-tx.txt  elements-block.txt  elements-tx.txt
boltzr/migrations/2024-07-14-234220_setup/: down.sql  up.sql
boltzr/migrations/2024-07-31-141126_webhook_status/: down.sql  up.sql
boltzr/migrations/2025-03-22-165852_offers/: down.sql  up.sql
boltzr/migrations/2025-04-07-174923_offers_websocket/: down.sql  up.sql
boltzr/migrations/2025-07-15-210514_preimage_hash_trigger/: down.sql  up.sql
boltzr/migrations/2025-07-23-115549_swap_update_trigger/: down.sql  up.sql
boltzr/migrations/2025-12-02-104258-0000_funding_address/: down.sql  up.sql
boltzr/migrations/2026-04-23-151018-0000_claim_transactions_swap_id_trigger/: down.sql  up.sql
boltzr/migrations/2026-05-12-000000-0000_disabled_signers/: down.sql  up.sql
boltzr/migrations/2026-05-27-000000-0000_swap_metadata/: down.sql  up.sql
boltzr/migrations/2026-05-27-000000-0000_swap_routing_metadata/: down.sql  up.sql
boltzr/migrations/2026-06-03-000000-0000_payjoin_receiver_sessions/: down.sql  up.sql
boltzr/migrations/2026-06-04-000000-0000_payjoin_receiver_sessions_swap_id/: down.sql  up.sql
boltzr/migrations/2026-06-04-000000-0001_payjoin_receiver_seen_inputs/: down.sql  up.sql
boltzr/migrations/2026-06-04-000000-0001_payjoin_receiver_sessions_payjoin_tx_id/: down.sql  up.sql
boltzr/protos/: boltzr.proto
boltzr/src/: backup_adapter.rs  config.rs  currencies.rs  main.rs  profiling.rs  tracing_setup.rs  types.rs
boltzr/src/api/: asset_rescue.rs  bolt12.rs  errors.rs  funding_address.rs  headers.rs  lightning.rs  mod.rs  quoter.rs  recovery.rs  rescue.rs  restore.rs  sse.rs  stats.rs  types.rs
boltzr/src/ark/: client.rs  mod.rs
boltzr/src/backup/: mod.rs
boltzr/src/cache/: memcache.rs  mod.rs  redis.rs
boltzr/src/chain/: chain_client.rs  elements_client.rs  mempool_client.rs  mod.rs  mrh_watcher.rs  rpc_client.rs  types.rs  utils.rs  zmq_client.rs
boltzr/src/db/: mod.rs  models.rs  schema.rs
boltzr/src/evm/: manager.rs  mod.rs  refund_signer.rs  utils.rs
boltzr/src/grpc/: mod.rs  server.rs  service.rs  status_fetcher.rs  tls.rs
boltzr/src/lightning/: invoice.rs  mod.rs
boltzr/src/metrics/: mod.rs  server.rs
boltzr/src/notifications/: alerts.rs  commands.rs  mattermost.rs  mod.rs  utils.rs
boltzr/src/payjoin/: mod.rs  wallet.rs
boltzr/src/service/: country_codes.rs  funding_address.rs  funding_address_claimer.rs  funding_address_signer.rs  funding_address_test_utils.rs  lightning_info.rs  mod.rs  pair_stats.rs  prometheus.rs  pubkey_iterator.rs  recovery.rs  rescue.rs  restore.rs
boltzr/src/swap/: asset_rescue.rs  expiry_checker.rs  filters.rs  funding_nursery.rs  magic_routing_hints.rs  manager.rs  mod.rs  status.rs  timeout_delta.rs  tx_check.rs  utxo_nursery.rs
boltzr/src/utils/: bip21.rs  bip321.rs  drop_guard.rs  mod.rs  pair.rs  serde.rs  system.rs  timeout_map.rs  units.rs  xpub.rs
boltzr/src/wallet/: ark.rs  bitcoin.rs  elements.rs  keys.rs  mod.rs
boltzr/src/webhook/: caller.rs  invoice_caller.rs  mod.rs  resolver.rs  status_caller.rs  types.rs
boltzr/src/ws/: mod.rs  status.rs  types.rs
docs/: api.md  (+38 more)
tools/: LICENSE  README.md  install-boltz-core-solidity-libs.sh  miner_fee.py  otp.py  pyproject.toml  requirements.txt  send.py  sse.py  stats.sql  wallet.py
tools/backup/: backup.py
tools/hold/: certs.py  cli_utils.py  config.py  consts.py  datastore.py  encoder.py  enums.py  errors.py  hold.py  htlc_handler.py  invoice.py  plugin.py  route_hints.py  router.py  server.py  settler.py  test_certs.py  test_encoder.py  test_grpc.py  test_plugin.py  test_route_hints.py  test_router.py  test_server.py  test_tracker.py  test_utils.py  tracker.py  transformers.py  utils.py
tools/hold/protos/: hold.proto  hold_pb2.py  hold_pb2.pyi  hold_pb2_grpc.py
tools/hold/tests/: cli_utils.py  test_encoder.py  test_plugin.py
tools/plugins/backup/: backup.py
tools/plugins/hold/: certs.py  config.py  consts.py  datastore.py  encoder.py  enums.py  errors.py  grpc_server.py  hold.py  htlc_handler.py  invoice.py  plugin.py  route_hints.py  server.py  settler.py  tracker.py  (+1 more)
tools/reconnector/: consts.py  plugin.py  reconnector.py  reconnector_config.py  test_config.py  test_reconnector.py
(+977 files in other folders)
