[workspace]
resolver = "3"
members = ["boltz-core", "boltzr", "boltzr-cli"]
exclude = ["hold"]

[workspace.package]
version = "3.12.1"
license = "AGPL-3"
authors = ["michael1011"]
edition = "2024"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
alloy = { version = "1.4.0", features = [
	"reqwest",
	"sol-types",
	"serde",
	"eip712",
	"signer-local",
	"signer-mnemonic",
	"providers",
	"transports",
	"contract",
	"json",
	"provider-ws",
	"json-rpc",
] }
anyhow = "1.0.100"
base64 = "0.22.1"
bitcoin = { version = "0.32.8", features = ["rand-std"] }
bitcoin_hashes = "0.19.0"
clap = { version = "4.5.54", features = ["derive"] }
elements = "0.26.1"
rand = "0.8.5"
reqwest = { version = "0.13.1", features = ["json"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serial_test = "3.3.1"
tokio = { version = "1.49.0", features = [
	"rt-multi-thread",
	"macros",
	"process",
	"net",
] }
tonic = { version = "0.14.2", features = ["tls-ring"] }
tonic-prost-build = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.3"
dirs = "6.0.0"
