[workspace]
resolver = "3"
members = [
	"boltz-core",
	"boltz-utils",
	"boltz-cache",
	"boltz-evm",
	"boltz-backup",
	"boltzr",
	"boltzr-cli",
]
exclude = ["hold"]

[workspace.package]
version = "3.12.1"
license = "AGPL-3"
authors = ["michael1011"]
edition = "2024"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
alloy = { version = "1.6.3", features = [
	"reqwest",
	"sol-types",
	"serde",
	"eip712",
	"signer-local",
	"signer-mnemonic",
	"providers",
	"transports",
	"contract",
	"json",
	"provider-ws",
	"json-rpc",
] }
anyhow = "1.0.101"
base64 = "0.22.1"
bitcoin = { version = "0.32.8", features = ["rand-std"] }
bitcoin_hashes = "0.19.0"
clap = { version = "4.5.58", features = ["derive"] }
elements = "0.26.1"
rand = "0.8.5"
reqwest = { version = "0.13.2", features = ["json"] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serial_test = "3.3.1"
tokio = { version = "1.49.0", features = [
	"rt-multi-thread",
	"macros",
	"process",
	"net",
] }
tonic = { version = "0.14.4", features = ["tls-ring"] }
tonic-prost-build = "0.14.4"
tonic-prost = "0.14.4"
prost = "0.14.3"
dirs = "6.0.0"
dashmap = "6.1.0"
bytes = "1.11.1"
chrono = "0.4.43"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
hex = { version = "0.4.3", features = ["serde"] }
async-trait = "0.1.89"
tower = { version = "0.5.3", features = ["util"] }
futures = "0.3.32"
tokio-util = "0.7.18"
