[workspace]
resolver = "3"
members = [
	"boltz-core",
	"boltz-utils",
	"boltz-cache",
	"boltz-evm",
	"boltz-backup",
	"boltzr",
	"boltzr-cli",
]
exclude = ["hold"]

[workspace.package]
version = "3.13.0"
license = "AGPL-3.0-only"
authors = ["michael1011"]
edition = "2024"
repository = "https://github.com/BoltzExchange/boltz-backend"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
alloy = { version = "2.1.0", features = [
	"reqwest",
	"sol-types",
	"serde",
	"eip712",
	"signer-local",
	"signer-mnemonic",
	"providers",
	"transports",
	"contract",
	"json",
	"provider-ws",
	"json-rpc",
] }
anyhow = "1.0.102"
base64 = "0.22.1"
bitcoin = { version = "0.32.10", features = ["rand-std"] }
bitcoin_hashes = "1.0.0"
clap = { version = "4.6.1", features = ["derive"] }
elements = "0.26.2"
rand = "0.8.6"
reqwest = { version = "0.13.4", features = ["json"] }
rustls = { version = "0.23.41", default-features = false, features = [
	"std",
	"tls12",
	"aws-lc-rs",
	"prefer-post-quantum",
] }
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serial_test = "3.5.0"
static_assertions = "1.1.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
	"rt-multi-thread",
	"macros",
	"process",
	"net",
] }
tonic = { version = "0.14.6", features = ["tls-ring"] }
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
prost = "0.14.4"
dirs = "6.0.0"
dashmap = "6.2.1"
bytes = "1.12.0"
chrono = "0.4.45"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
hex = { version = "0.4.3", features = ["serde"] }
async-trait = "0.1.89"
tower = { version = "0.5.3", features = ["util"] }
futures = "0.3.32"
tokio-util = "0.7.18"
async-tungstenite = { version = "0.34.1", features = [
	"tokio-runtime",
	"tokio-rustls-webpki-roots",
] }
