[package]
name = "boltz-backup"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
boltz-utils = { path = "../boltz-utils" }
aws-sdk-s3 = { version = "1.129.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
bytes = { workspace = true }
chrono = { workspace = true }
cron = "0.16.0"
dashmap = { workspace = true }
flate2 = "1.1.9"
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
