[package]
name = "boltz-cache"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
boltz-utils = { path = "../boltz-utils" }
dashmap = { workspace = true }
redis = { version = "1.0.3", features = ["tokio-comp", "r2d2"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
