[package]
name = "boltz-core"
version = "0.1.0"
description = "Atomic swap primitives for Bitcoin and Liquid used by Boltz"
license = "MIT"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = ["musig", "bitcoin", "elements"]
musig = ["dep:secp256k1"]
bitcoin = ["dep:bitcoin"]
elements = ["dep:elements", "dep:bitcoin"]

[dependencies]
bitcoin = { workspace = true, optional = true }
elements = { workspace = true, optional = true }
hex = { workspace = true }
thiserror = { workspace = true }
secp256k1 = { version = "0.32.0-beta.2", features = [
    "rand",
    "global-context",
], optional = true }
serde = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
static_assertions = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
