[package]
name = "boltz-evm"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
test-utils = []

[lib]
# Generated contract bindings can't be doctested
doctest = false

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
boltz-cache = { path = "../boltz-cache" }
futures = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tower = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
serial_test = { workspace = true }
