[package]
name = "boltzr-cli"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
boltz-core = { path = "../boltz-core" }
clap = { workspace = true }
elements = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
indicatif = "0.18.3"

[dev-dependencies]
rstest = { workspace = true }
