[package]
name = "boltzr-cli"
build = "build.rs"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
boltz-core = { path = "../boltz-core" }
boltz-evm = { path = "../boltz-evm" }
clap = { workspace = true }
elements = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
indicatif = "0.18.3"
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
dirs = { workspace = true }
hmac = "0.12.1"
sha2 = "0.10.9"
inquire = { version = "0.9.2", default-features = false, features = [
    "crossterm",
] }

[dev-dependencies]
rstest = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
