[package]
name = "boltzr"
build = "build.rs"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["metrics", "loki", "otel"]
metrics = [
	"dep:metrics",
	"dep:axum-prometheus",
	"dep:metrics-process",
	"dep:metrics-exporter-prometheus",
]
loki = ["dep:tracing-loki"]
otel = [
	"dep:pyroscope",
	"dep:tower-http",
	"dep:opentelemetry",
	"dep:diesel-tracing",
	"dep:opentelemetry_sdk",
	"dep:pyroscope_pprofrs",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
	"dep:opentelemetry-semantic-conventions",
]

[dependencies]
axum = "0.8.7"
bitcoin_hashes = { workspace = true }
clap = { workspace = true }
crossbeam-channel = "0.5.15"
ctrlc = { version = "3.5.1", features = ["termination"] }
dirs = "6.0.0"
num_cpus = "1.17.0"
prost = "0.14.1"
rcgen = { version = "0.14.5", features = ["x509-parser"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.9.8"
tonic = { version = "0.14.2", features = ["tls-ring"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-util = "0.7.17"
tracing-loki = { version = "0.2.6", optional = true }
futures = "0.3.31"
metrics-process = { version = "2.4.2", optional = true }
metrics-exporter-prometheus = { version = "0.18.1", optional = true, default-features = false }
axum-prometheus = { version = "0.6.1", default-features = false, optional = true, features = [
	"prometheus",
] }
metrics = { version = "0.24.3", optional = true }
diesel_migrations = "2.2.0"
r2d2 = "0.8.10"
diesel = { version = "2.2.12", default-features = false, features = [
	"postgres",
	"r2d2",
	"chrono",
	"serde_json",
	"32-column-tables",
] }
strum_macros = "0.27.2"
strum = "0.27.2"
dashmap = "6.1.0"
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.31.0", optional = true, features = [
	"semconv_experimental",
] }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = [
	"rt-tokio",
] }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = [
	"grpc-tonic",
	"gzip-tonic",
] }
tracing-opentelemetry = { version = "0.32.0", optional = true }
diesel-tracing = { version = "0.3.1", optional = true, features = [
	"postgres",
	"r2d2",
	"statement-fields",
] }
alloy = { workspace = true }
async-tungstenite = { version = "0.32.0", features = [
	"tokio-native-tls",
	"tokio-runtime",
] }
async-trait = "0.1.89"
futures-util = "0.3.31"
async-stream = "0.3.6"
anyhow = { workspace = true }
lightning = { version = "0.2.0", features = ["std"] }
lightning-invoice = { version = "0.34.0", features = ["std"] }
bech32 = "0.11.0"
bitcoin = { workspace = true }
elements = { workspace = true }
base64 = { workspace = true }
rust-s3 = "0.37.1"
cron = "0.15.0"
chrono = "0.4.42"
fedimint-tonic-lnd = { version = "0.3.0", features = [
	"lightningrpc",
], default-features = false }
flate2 = "1.1.5"
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.10", optional = true }
csv = "1.4.0"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
redis = { version = "1.0.1", features = ["tokio-comp", "r2d2"] }
bytes = "1.11.0"
elements-miniscript = "0.4.0"
rand = { workspace = true }
tokio-stream = "0.1.17"
rapidfuzz = "0.5.0"
zeromq = { version = "0.4.1", features = ["tokio-runtime", "tcp-transport"] }
tonic-prost = "0.14.2"
boltz-core = { path = "../boltz-core" }
bip39 = "2.2.2"
tower-http = { version = "0.6.8", optional = true, features = ["trace"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
tonic-prost-build = "0.14.2"

[dev-dependencies]
eventsource-client = "0.15.1"
http-body-util = "0.1.3"
mockall = "0.14.0"
rstest = { workspace = true }
serial_test = { workspace = true }
tower = { version = "0.5.2", features = ["util"] }
wiremock = "0.6.5"
