[package]
name = "boltzr"
build = "build.rs"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = ["metrics", "loki", "otel"]
metrics = [
	"dep:metrics",
	"dep:axum-prometheus",
	"dep:metrics-process",
	"dep:metrics-exporter-prometheus",
]
loki = ["dep:tracing-loki"]
otel = [
	"dep:pyroscope",
	"dep:tower-http",
	"dep:opentelemetry",
	"dep:opentelemetry_sdk",
	"dep:pyroscope_pprofrs",
	"dep:opentelemetry-otlp",
	"dep:tracing-opentelemetry",
	"dep:opentelemetry-semantic-conventions",
]

[dependencies]
axum = "0.8.8"
bitcoin_hashes = { workspace = true }
clap = { workspace = true }
crossbeam-channel = "0.5.15"
ctrlc = { version = "3.5.1", features = ["termination"] }
dirs = { workspace = true }
prost = { workspace = true }
rcgen = { version = "0.14.7", features = ["x509-parser"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.9.11"
tonic = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio-util = "0.7.18"
tracing-loki = { version = "0.2.6", optional = true }
futures = "0.3.31"
metrics-process = { version = "2.4.2", optional = true }
metrics-exporter-prometheus = { version = "0.18.1", optional = true, default-features = false }
axum-prometheus = { version = "0.10.0", default-features = false, optional = true, features = [
	"prometheus",
] }
metrics = { version = "0.24.3", optional = true }
diesel_migrations = "2.3.1"
r2d2 = "0.8.10"
diesel = { version = "2.3.6", default-features = false, features = [
	"postgres",
	"r2d2",
	"chrono",
	"serde_json",
	"32-column-tables",
] }
strum_macros = "0.27.2"
strum = "0.27.2"
dashmap = "6.1.0"
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.31.0", optional = true, features = [
	"semconv_experimental",
] }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = [
	"rt-tokio",
] }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = [
	"grpc-tonic",
	"gzip-tonic",
] }
tracing-opentelemetry = { version = "0.32.1", optional = true }
alloy = { workspace = true }
async-tungstenite = { version = "0.32.1", features = [
	"tokio-native-tls",
	"tokio-runtime",
] }
async-trait = "0.1.89"
futures-util = "0.3.31"
async-stream = "0.3.6"
anyhow = { workspace = true }
lightning = { version = "0.2.1", features = ["std"] }
lightning-invoice = { version = "0.34.0", features = ["std"] }
bech32 = "0.11.1"
bitcoin = { workspace = true }
elements = { workspace = true }
base64 = { workspace = true }
aws-sdk-s3 = "1.121.0"
cron = "0.15.0"
chrono = "0.4.43"
flate2 = "1.1.8"
pyroscope = { version = "0.5.8", optional = true }
pyroscope_pprofrs = { version = "0.2.10", optional = true }
csv = "1.4.0"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
redis = { version = "1.0.3", features = ["tokio-comp", "r2d2"] }
bytes = "1.11.1"
elements-miniscript = "0.4.0"
rand = { workspace = true }
tokio-stream = "0.1.18"
rapidfuzz = "0.5.0"
zeromq = { version = "0.4.1", features = ["tokio-runtime", "tcp-transport"] }
tonic-prost = { workspace = true }
boltz-core = { path = "../boltz-core" }
bip39 = "2.2.2"
tower-http = { version = "0.6.8", optional = true, features = ["trace"] }
rustls = { version = "0.23.36", default-features = false, features = [
	"std",
	"tls12",
	"aws-lc-rs",
	"prefer-post-quantum",
] }
rustls-pki-types = { version = "1.14.0", features = ["std"] }
hyper-util = "0.1.19"
tower = { version = "0.5.3", features = ["util"] }
hyper-rustls = { version = "0.27.7", default-features = false, features = [
	"http2",
	"tls12",
	"aws-lc-rs",
] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }
tonic-prost-build = { workspace = true }

[dev-dependencies]
eventsource-client = "0.16.1"
http-body-util = "0.1.3"
mockall = "0.14.0"
rstest = { workspace = true }
serial_test = { workspace = true }
wiremock = "0.6.5"
