[tool.poetry]
name = "plugins"
version = "0.1.0"
description = ""
authors = ["michael1011 <me@michael1011.at>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-bitcoinrpc = "^1.0"
pyotp = "^2.8.0"
sseclient = "^0.0.27"
ruff = "^0.8.4"
pyln-client = "^24.8.2"
bolt11 = "^2.1.0"
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"
grpc-interceptor = "^0.15.4"
psycopg = { version = "^3.2.3", extras = ["binary"] }
sqlalchemy = "^2.0.36"
cachetools = "^5.5.0"
pandas = "^2.2.3"
strenum = "^0.4.15"
cryptography = "^41"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["plugins/hold/protos", "plugins/mpay/protos"]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201", "D101", "D211", "D213", "INP001", "BLE001", "FBT001", "FBT002", "FBT003", "S605",
    "TD002", "TD003", "D102", "D103", "D107", "D100", "SLOT000", "S101", "FIX002", "S311", "UP035",
    "PLR2004", "ARG001", "PLR0913", "D104", "FA102", "COM812", "UP032", "ISC001", "A003", "D203"
]

[tool.ruff.format]
quote-style = "double"
